--- a/jupyter-labs-webscraping.ipynb
+++ b/jupyter-labs-webscraping.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -312,7 +312,7 @@
        "<title>List of Falcon 9 and Falcon Heavy launches - Wikipedia</title>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -851,18 +851,22 @@
       "F9 B5 ♺\n",
       "F9 B5\n",
       "F9 B5B1051.8609\n",
-      "F9 B5B1058.5613\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'string'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1159/354354048.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     60\u001b[0m             \u001b[0;31m# Customer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m             \u001b[0;31m# TODO: Append the customer into launch_dict with key `Customer`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m             \u001b[0mcustomer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m             \u001b[0;31m#print(customer)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'string'"
+      "F9 B5B1058.5613\n",
+      "F9 B5 ♺[\n",
+      "F9 B5 ♺\n",
+      "F9 B5 ♺[\n",
+      "F9 B5 ♺[\n",
+      "F9 B5 ♺\n",
+      "F9 B5B1060.6643\n",
+      "F9 B5 ♺\n",
+      "F9 B5B1061.2647\n",
+      "F9 B5B1060.7652\n",
+      "F9 B5B1049.9655\n",
+      "F9 B5B1051.10657\n",
+      "F9 B5B1058.8660\n",
+      "F9 B5B1063.2665\n",
+      "F9 B5B1067.1668\n",
+      "F9 B5\n"
      ]
     }
    ],
@@ -886,17 +890,19 @@
     "            extracted_row += 1\n",
     "            # Flight Number value\n",
     "            # TODO: Append the flight_number into launch_dict with key `Flight No.`\n",
-    "            #print(flight_number)\n",
+    "            # print(flight_number)\n",
     "            datatimelist=date_time(row[0])\n",
-    "            \n",
+    "            launch_dict[\"Flight No.\"].append(flight_number)\n",
     "            # Date value\n",
     "            # TODO: Append the date into launch_dict with key `Date`\n",
     "            date = datatimelist[0].strip(',')\n",
+    "            launch_dict[\"Date\"].append(date)\n",
     "            #print(date)\n",
     "            \n",
     "            # Time value\n",
     "            # TODO: Append the time into launch_dict with key `Time`\n",
     "            time = datatimelist[1]\n",
+    "            launch_dict[\"Time\"].append(time)\n",
     "            #print(time)\n",
     "              \n",
     "            # Booster version\n",
@@ -904,41 +910,53 @@
     "            bv=booster_version(row[1])\n",
     "            if not(bv):\n",
     "                bv=row[1].a.string\n",
+    "            launch_dict[\"Version Booster\"].append(bv)\n",
     "            print(bv)\n",
     "            \n",
     "            # Launch Site\n",
     "            # TODO: Append the bv into launch_dict with key `Launch Site`\n",
     "            launch_site = row[2].a.string\n",
+    "            launch_dict[\"Launch site\"].append(launch_site)\n",
     "            #print(launch_site)\n",
     "            \n",
     "            # Payload\n",
     "            # TODO: Append the payload into launch_dict with key `Payload`\n",
     "            payload = row[3].a.string\n",
+    "            launch_dict[\"Payload\"].append(payload)\n",
     "            #print(payload)\n",
     "            \n",
     "            # Payload Mass\n",
     "            # TODO: Append the payload_mass into launch_dict with key `Payload mass`\n",
     "            payload_mass = get_mass(row[4])\n",
+    "            launch_dict[\"Payload mass\"].append(payload_mass)\n",
     "            #print(payload)\n",
     "            \n",
     "            # Orbit\n",
     "            # TODO: Append the orbit into launch_dict with key `Orbit`\n",
     "            orbit = row[5].a.string\n",
+    "            launch_dict[\"Orbit\"].append(orbit)\n",
     "            #print(orbit)\n",
     "            \n",
     "            # Customer\n",
     "            # TODO: Append the customer into launch_dict with key `Customer`\n",
-    "            customer = row[6].a.string\n",
+    "            if row[6].a is not None:\n",
+    "                customer = row[6].a.string\n",
+    "            else:\n",
+    "                customer = ''\n",
+    "            #print(row[6].a.string)\n",
+    "            launch_dict[\"Customer\"].append(customer)\n",
     "            #print(customer)\n",
     "            \n",
     "            # Launch outcome\n",
     "            # TODO: Append the launch_outcome into launch_dict with key `Launch outcome`\n",
     "            launch_outcome = list(row[7].strings)[0]\n",
+    "            launch_dict[\"Launch outcome\"].append(launch_outcome)\n",
     "            #print(launch_outcome)\n",
     "            \n",
     "            # Booster landing\n",
     "            # TODO: Append the launch_outcome into launch_dict with key `Booster landing`\n",
     "            booster_landing = landing_status(row[8])\n",
+    "            launch_dict[\"Booster landing\"].append(booster_landing)\n",
     "            #print(booster_landing)\n",
     "            "
    ]
@@ -952,18 +970,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jupyterlab/conda/envs/python/lib/python3.7/site-packages/ipykernel_launcher.py:1: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df= pd.DataFrame({ key:pd.Series(value) for key, value in launch_dict.items() })"
    ]
@@ -978,10 +987,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "<code>df.to_csv('spacex_web_scraped.csv', index=False)</code>\n"
+    "df.to_csv('spacex_web_scraped.csv', index=False)\n"
    ]
   },
   {
